1.上传文件优化； 2.提交信访信息； 3.审核信访信息； 4.其它优化。

--- a/service-boot/src/main/resources/application.yml
+++ b/service-boot/src/main/resources/application.yml
@@ -26,6 +26,8 @@ mybatis:
   type-aliases-package: com.tasty.mybatis.entity
   configuration:
     map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
 cowechat:
   corpid: wwb4ee61617da59e27
   corpsecret: n3m-DxiMiWmrIn653V051ENfvzwVkv3CeLfpZrVixrE
