--- a/service-boot/src/main/resources/application.yml
+++ b/service-boot/src/main/resources/application.yml
@@ -30,7 +30,10 @@ mybatis:
 
 cowechat:
   corpid: wwb4ee61617da59e27
-  corpsecret: n3m-DxiMiWmrIn653V051ENfvzwVkv3CeLfpZrVixrE
+  corpsecret:
+    examineManage: n3m-DxiMiWmrIn653V051ENfvzwVkv3CeLfpZrVixrE
+    letterVisit: Uq3DVE6jofpqFI2KsRZoO2LeShCGxOMJ8GJsleyyhW8
+    addressList: tZp7GsGupcfNiiqmPEQ0BtuEkoGdBTPNMnEgKohFU58
 
 local:
   filePath: E:/test/
