1.新增保存转派人信息； 2.新增评价功能； 3.信访平台不展示详细信息。

--- a/service-boot/src/main/resources/application.yml
+++ b/service-boot/src/main/resources/application.yml
@@ -41,7 +41,7 @@ cowechat:
     addressList: tZp7GsGupcfNiiqmPEQ0BtuEkoGdBTPNMnEgKohFU58
   examine:
     lead:
-      userIds: ChifLan
+      userIds: ChifLan,BaiPiShuSheng
 
 local:
   filePath: E:/test/
