--- a/service-boot/pom.xml
+++ b/service-boot/pom.xml
@@ -17,6 +17,14 @@
             <groupId>com.tasty</groupId>
             <artifactId>service</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>com.tasty</groupId>
+            <artifactId>service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+            <classifier>classes</classifier>
         </dependency>
     </dependencies>
     <build>
@@ -30,6 +38,19 @@
                 <artifactId>maven-resources-plugin</artifactId>
                 <configuration>
                     <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <overlays>
+                        <overlay>
+                            <groupId>com.tasty</groupId>
+                            <artifactId>service</artifactId>
+                        </overlay>
+                    </overlays>
                 </configuration>
             </plugin>
         </plugins>
