--- a/service/pom.xml
+++ b/service/pom.xml
@@ -8,10 +8,12 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <artifactId>service</artifactId>
+    <name>service</name>
+    <url>http://maven.apache.org</url>
 
     <dependencies>
         <dependency>
@@ -37,6 +39,19 @@
                 <artifactId>maven-resources-plugin</artifactId>
                 <configuration>
                     <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <attachClasses>true</attachClasses>
+                    <warName>service</warName>
+                    <archiveClasses>true</archiveClasses>
+                    <packagingExcludes>
+                        WEB-INF/lib/*.jar
+                    </packagingExcludes>
                 </configuration>
             </plugin>
         </plugins>
