配置文件调整

--- a/service-boot/pom.xml
+++ b/service-boot/pom.xml
@@ -45,6 +45,7 @@
                 <version>2.6</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <warName>cowechat</warName>
                     <overlays>
                         <overlay>
                             <groupId>com.tasty</groupId>
